<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.assignment3.activities.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/coursesFragment"
        android:name="com.example.assignment3.activities.courses.CoursesFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_courses" />
    <fragment
        android:id="@+id/societiesFragment"
        android:name="com.example.assignment3.activities.societies.SocietiesFragment"
        android:label="@string/title_societies"
        tools:layout="@layout/fragment_societies" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.assignment3.activities.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>