<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HomeFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/homeGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_greeting_name"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            app:layout_constraintVertical_bias="0.025" />

        <View
            android:id="@+id/blank_space"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/homeGreeting"/>

        <!--Image reference: https://unsplash.com/photos/MZxqc6n9qCw-->
        <ImageView
            android:id="@+id/universityImage"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/university"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/uni_image_content_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank_space"/>

        <!-- Reference for text is from the Staffs Uni website
        (https://www.staffs.ac.uk/visit/undergraduate-open-day) -->
        <TextView
            android:id="@+id/introText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="10dp"
            android:text="@string/intro_text"
            app:layout_constraintTop_toBottomOf="@id/universityImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Reference for text is from the Staffs Uni website
(       https://www.staffs.ac.uk/visit/undergraduate-open-day) -->
        <TextView
            android:id="@+id/continuedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="10dp"
            android:text="@string/continued_text"
            app:layout_constraintTop_toBottomOf="@id/introText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/continuedText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5sp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:text="@string/table_upcoming_header"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                </TableRow>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:stretchColumns="0,1,2"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_site_header"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_building_header"
                    android:layout_column="1"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_date_header"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_column="2"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:stretchColumns="0,1,2">

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_site_stoke"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_building_mellor"
                    android:layout_column="1"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_building_date1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_column="2"/>

            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:stretchColumns="0,1,2">

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_site_stoke"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_building_catalyst"
                    android:layout_column="1"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_building_date2"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_column="2"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:stretchColumns="0,1,2"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_site_stoke"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_building_cadman"
                    android:layout_column="1"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:text="@string/table_building_date3"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_column="2"/>
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
